[package]
name = "enum_unwrapper"
version = "0.1.0"
edition = "2021"
description = "Small library for easily converting from user-defined enumerations to the types in the enumeration variants"
license = "Apache-2.0"
authors = ["Benjamin Richcreek <richcreekbenjamin@gmail.com>"]
keywords = ["convenience","enum","conversion","procedural macro library","auto-implementation"]
categories = ["development-tools::build-utils","rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc_macro = true

[dependencies]
syn = { version = "2.0",  features = ["full"] }
quote = "1.0"
